# AI_Code_Review

./: Ai_code_review.py  CMakeLists.txt  Pointers.cpp  review_script.py  sample.cpp  sample_test.cpp
.github/workflows/: ai-reviewer.yml  codeql.yml  review.yml
scripts/: ai_code_reviewer.py  sample_test.cpp
